added promise, comments belong to posts with class- display:none

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </form>
     </main>
     <!-- <script src="main.js"></script> -->
-    <script src="xhr.js"></script>
-    <!-- <script src="promise.js"></script> -->
+    <!-- <script src="xhr.js"></script> -->
+    <script src="promise.js"></script>
   </body>
 </html>
