added fetch, function sendRequest with error message

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     </main>
     <!-- <script src="main.js"></script> -->
     <!-- <script src="xhr.js"></script> -->
-    <script src="promise.js"></script>
+    <!-- <script src="promise.js"></script> -->
+    <script src="fetch.js"></script>
+
   </body>
 </html>
