added fetch_remastered with localStorage, with new classes, possibility remove posts and comments onclick

--- a/index.html
+++ b/index.html
@@ -32,10 +32,19 @@
         <button>Submit</button>
       </form>
     </main>
+    <!-- Skorini -->
+    <div>
+      <button id="clear_localstorage" style="cursor: pointer; width: 100%; height: 50px; color:white; background-color: rgb(182, 17, 72);" class="loaded">
+        Delete posts and comments
+      </button>
+    </div>
+    <!-- End Skorini -->
     <!-- <script src="main.js"></script> -->
     <!-- <script src="xhr.js"></script> -->
     <!-- <script src="promise.js"></script> -->
-    <script src="fetch.js"></script>
+
+    <!-- <script src="fetch.js"></script> -->
+    <script src="fetch_remastered.js"></script>
 
   </body>
 </html>
